# vrpn_mocap

./: .gitignore  CHANGELOG.rst  CMakeLists.txt  LICENSE  README.md  package.xml
.github/workflows/: foxy.yml  humble.yml  iron.yml  jazzy.yml  rolling.yml
config/: client.yaml
include/vrpn_mocap/: client.h  client.hpp  tracker.hpp
include/vrpn_ros2/: client.h  tracker.hpp
launch/: client.launch.yaml
src/: client.cpp  client_node.cpp  tracker.cpp
